# nest-gpu

./: CMakeLists.txt
cmake/: CheckIncludesSymbols.cmake  ConfigureSummary.cmake
python/Potjans_2014/: network.py
python/test/: test_brunel_outdegree.py  test_connect.py  test_getarr.py  test_group_param.py  test_spike_times.py  test_syn_group.py  test_syn_model.py
pythonlib/: CMakeLists.txt  llapi_helpers.pxd  llapi_helpers.pyx  nestgpu.py  nestgpukernel_api.pxd  nestgpukernel_api.pyx
src/: connect_rules.h  nestgpu.cu  nestgpu_C.cpp  nestgpu_C.h
